created makefile